# game-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-windows.sh  build.sh  build.zig  ccs.sh  clean.sh  run.sh
core/: CMakeLists.txt
core/src/core/: base.h  core.c  core.h  entry.c  event.c  internal.h  types.h
core/src/core/asset/: asset.c  asset_internal.c
core/src/core/audio/: audio.c
core/src/core/container/: hash.c  string8.c  vector2.c  vector3.c  vector4.c
core/src/core/debug/: debug.c  internal.h  memory.c  profiler.c
core/src/core/event/: event.c
core/src/core/input/: input.c
core/src/core/logger/: logger.c
core/src/core/math/: math.c
core/src/core/memory/: arena.c
core/src/core/module/: module.c
core/src/core/scene/: scene.c
core/src/core/uuid/: uuid.c
core/src/core/window/: window.c  window_internal.c
editor/: CMakeLists.txt
editor/src/editor/: editor.c  editor.h
engine/: CMakeLists.txt
engine/src/engine/: app.c  app.h  engine.c  engine.h
game/: CMakeLists.txt
game/src/game/: game.c
runtime/: CMakeLists.txt
runtime/src/runtime/: runtime.c  runtime.h
